# Template_List

./: CMakeLists.txt  README.md  main.cpp
Include/: Array_List.hpp  Linked_List.hpp
Tests/: Test_ArrayList.hpp  Test_LinkedList.hpp
include/: Array_List.hpp  Linked_List.hpp  Test_ArrayList.hpp  Test_LinkedList.hpp
